# ai-backend

./: .dockerignore  .env.template  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
demo/: Dockerfile  demo.py
files/: Mithlesh-Upadhyay.txt
services/: Dockerfile  Dockerfile.worker  main.py
