[project]
name = "ai-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Mithlesh Upadhyay",email = "mithleshupadhyay515@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "openai (==0.28)",
    "pydantic (>=2.11.3,<3.0.0)",
    "celery (>=5.5.1,<6.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "diskcache (>=5.6.3,<6.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "gradio (>=5.25.2,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
